--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ dependencies {
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:3.5.2'
+  testCompile 'org.mockito:mockito-core:1.10.19'
 }
